--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a href="./index.html" class="logo"><span>Web</span>Studio</a>
 		<ul class="site-nav">
 			<li><a href="./index.html" class="nav-item">Студія</a></li>
-			<li><a href="#" class="nav-item">Портфоліо</a></li>
+			<li><a href="./portfolio.html" class="nav-item">Портфоліо</a></li>
 			<li><a href="#" class="nav-item">Контакти</a></li>
 		</ul>
 	</nav>
