--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Web</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="./css/index.css">
 </head>
 
 <!--Шапка сайта-->
-<header>
-	<nav class="nav">
-		<a href="./index.html" class="logo"><span>Web</span>Studio</a>
-		<ul class="site-nav">
-			<li><a href="./index.html" class="nav-item">Студія</a></li>
-			<li><a href="./portfolio.html" class="nav-item">Портфоліо</a></li>
-			<li><a href="#" class="nav-item">Контакти</a></li>
+<header class="header">
+	<nav class="header-nav">
+		<a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+		<ul class="header-list">
+			<li class="header-item list"><a class="header-link link" href="./index.html">Студія</a></li>
+			<li class="header-item list"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
+			<li class="header-item list"><a class="header-link link" href="#">Контакти</a></li>
 		</ul>
 	</nav>
 
 	<ul class="adress-nav">
-		<li><a href="mailto:info@devstudio.com" class="adress-item">info@devstudio.com</a></li>
-		<li><a href="tel:+380961111111" class="adress-item">+38 096 111 11 11</a></li>
+		<li class="list"><a href="mailto:info@devstudio.com" class="adress-link">info@devstudio.com</a></li>
+		<li class="list"><a href="tel:+380961111111" class="adress-link">+38 096 111 11 11</a></li>
 	</ul>
-
 </header>
 
 <!--Главная часть-->
@@ -32,26 +36,26 @@
 	<!--  Hero -->
 	<section class="hero">
 		<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-		<button type="button">Замовити послугу</button>
+		<button type="button" class="hero-btn">Замовити послугу</button>
 	</section>
 
 	<!-- Что нам важно -->
 	<section class="section">
 		<h2 class="section-title">Нашi переваги</h2>
 		<ul class="significant">
-			<li>
+			<li class="significant-list list">
 				<h3 class="significant-title">Увага до деталей</h3>
 				<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 			</li>
-			<li>
+			<li class="significant-list list">
 				<h3 class="significant-title">Пунктуальнiсть</h3>
 				<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 			</li>
-			<li>
+			<li class="significant-list list">
 				<h3 class="significant-title">Планування</h3>
 				<p>Так само консультація з широким активом значною мірою зумовлює.</p>
 			</li>
-			<li>
+			<li class="significant-list list">
 				<h3 class="significant-title">Сучаснi технологiї</h3>
 				<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 			</li>
@@ -61,33 +65,33 @@
 	<section class="section">
 		<h2 class="section-title">Чим ми займаємося</h2>
 		<ul>
-			<li><img src="./img/w-w-d-1.jpg" alt="пишемо код" width="370"></li>
-			<li><img src="./img/w-w-d-2.jpg" alt="читаемо код" width="370"></li>
-			<li><img src="./img/w-w-d-3.jpg" alt="аналiтика" width="370"></li>
+			<li class="list"><img src="./img/w-w-d-1.jpg" alt="пишемо код" width="370"></li>
+			<li class="list"><img src="./img/w-w-d-2.jpg" alt="читаемо код" width="370"></li>
+			<li class="list"><img src="./img/w-w-d-3.jpg" alt="аналiтика" width="370"></li>
 		</ul>
 	</section>
 
 	<!-- Наша команда -->
-	<section class="section">
+	<section class="team section">
 		<h2 class="section-title">Наша команда</h2>
 
-		<ul class="team">
-			<li>
+		<ul class="team-list">
+			<li class="team-item list">
 				<img src="./img/igord.jpg" alt="Ігор Дем'яненко" width="270">
 				<h3 class="team-title">Ігор Дем'яненко</h3>
 				<p>Product Designer</p>
 			</li>
-			<li>
+			<li class="team-item list">
 				<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270">
 				<h3 class="team-title">Ольга Рєпіна</h3>
 				<p>Frontend Developer</p>
 			</li>
-			<li>
+			<li class="team-item list">
 				<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270">
 				<h3 class="team-title">Микола Тарасов</h3>
 				<p>Marketing</p>
 			</li>
-			<li>
+			<li class="team-item list">
 				<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270">
 				<h3 class="team-title">Михайло Єрмаков</h3>
 				<p>UI Designer</p>
@@ -98,16 +102,18 @@
 
 <!--Подвал-->
 <footer class="footer">
-	<a href="./index.html" class="logo"><span>Web</span>Studio</a>
+	<a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
 	<!-- Адрес -->
 	<address>
 		<ul class="footer-list">
-			<li><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank" rel="noopener noreferrer nofollow"
-					class="footer-item">м.
+			<li class="list"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
+					rel="noopener noreferrer nofollow" class="footer-item link">м.
 					Київ,
 					пр-т Лесі Українки, 26</a></li>
-			<li><a href="mailto:info@devstudio.com" class="footer-item contakt">info@devstudio.com</a></li>
-			<li><a href="tel:+380961111111" class="footer-item contakt">+38 096 111 11 11</a></li>
+			<li class="list"><a href="mailto:info@devstudio.com" class="footer-item contakt link">info@devstudio.com</a>
+			</li>
+			<li class="list"><a href="tel:+380961111111" class="footer-item contakt link">+38 096 111 11 11</a>
+			</li>
 		</ul>
 	</address>
 </footer>
