--- a/portfolio.html
+++ b/portfolio.html
@@ -12,73 +12,73 @@
 <body>
 
     <!-- Header -->
-    <header>
-        <nav class="nav">
-            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-            <ul class="site-nav">
-                <li><a href="./index.html" class="nav-item">Студія</a></li>
-                <li><a href="./portfolio.html" class="nav-item current">Портфоліо</a></li>
-                <li><a href="#" class="nav-item">Контакти</a></li>
+    <header class="header">
+        <nav class="header-nav">
+            <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
+            <ul class="header-list">
+                <li class="header-item list"><a class="header-link link" href="./index.html">Студія</a></li>
+                <li class="header-item list"><a class="header-link link current" href="./portfolio.html">Портфоліо</a>
+                </li>
+                <li class="header-item list"><a class="header-link link" href="#">Контакти</a></li>
             </ul>
         </nav>
 
         <ul class="adress-nav">
-            <li><a href="mailto:info@devstudio.com" class="adress-item">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="adress-item">+38 096 111 11 11</a></li>
+            <li class="list"><a href="mailto:info@devstudio.com" class="adress-link">info@devstudio.com</a></li>
+            <li class="list"><a href="tel:+380961111111" class="adress-link">+38 096 111 11 11</a></li>
         </ul>
-
     </header>
     <!-- Главная страница -->
     <ul class="btn-group">
-        <li><button type="button" class="btn">Усі</button></li>
-        <li><button type="button" class="btn">Веб-сайти</button></li>
-        <li><button type="button" class="btn">Додатки</button></li>
-        <li><button type="button" class="btn">Дизайн</button></li>
-        <li><button type="button" class="btn">Маркетинг</button></li>
+        <li class="list"><button type="button" class="btn">Усі</button></li>
+        <li class="list"><button type="button" class="btn">Веб-сайти</button></li>
+        <li class="list"><button type="button" class="btn">Додатки</button></li>
+        <li class="list"><button type="button" class="btn">Дизайн</button></li>
+        <li class="list"><button type="button" class="btn">Маркетинг</button></li>
     </ul>
 
     <ul class="cards-group">
-        <li>
+        <li class="list">
             <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
             <h1>Технокряк</h1>
             <p>Веб-сайт</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
             <h1>Постер New Orlean vs Golden Star</h1>
             <p>Дизайн </p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
             <h1>Ресторан Seafood</h1>
             <p>Додаток</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
             <h1>Проєкт Prime</h1>
             <p>Маркетинг</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
             <h1>Проєкт Boxes</h1>
             <p>Додаток</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
             <h1>Inspiration has no Borders</h1>
             <p>Веб-сайт</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/book.jpg" alt="opened book" width="370">
             <h1>Видання Limited Edition</h1>
             <p>Дизайн</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
             <h1>Проєкт LAB</h1>
             <p>Маркетинг</p>
         </li>
-        <li>
+        <li class="list">
             <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
             <h1>Growing Business</h1>
             <p>Додаток</p>
@@ -155,16 +155,19 @@
 
 
     <footer class="footer">
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
         <!-- Адрес -->
         <address>
             <ul class="footer-list">
-                <li><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank" rel="noopener noreferrer nofollow"
-                        class="footer-item">м.
+                <li class="list"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
+                        rel="noopener noreferrer nofollow" class="footer-item link">м.
                         Київ,
                         пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="footer-item contakt">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-item contakt">+38 096 111 11 11</a></li>
+                <li class="list"><a href="mailto:info@devstudio.com"
+                        class="footer-item contakt link">info@devstudio.com</a>
+                </li>
+                <li class="list"><a href="tel:+380961111111" class="footer-item contakt link">+38 096 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
