formin with css

--- a/index.html
+++ b/index.html
@@ -45,23 +45,24 @@
 		<ul class="significant">
 			<li class="significant-list list">
 				<h3 class="significant-title">Увага до деталей</h3>
-				<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+				<p class="sign-subtxt">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 			</li>
 			<li class="significant-list list">
 				<h3 class="significant-title">Пунктуальнiсть</h3>
-				<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+				<p class="sign-subtxt">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 			</li>
 			<li class="significant-list list">
 				<h3 class="significant-title">Планування</h3>
-				<p>Так само консультація з широким активом значною мірою зумовлює.</p>
+				<p class="sign-subtxt">Так само консультація з широким активом значною мірою зумовлює.</p>
 			</li>
 			<li class="significant-list list">
 				<h3 class="significant-title">Сучаснi технологiї</h3>
-				<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+				<p class="sign-subtxt">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 			</li>
 		</ul>
 	</section>
 
+	<!-- Чем занимаемся -->
 	<section class="section">
 		<h2 class="section-title">Чим ми займаємося</h2>
 		<ul>
@@ -79,22 +80,22 @@
 			<li class="team-item list">
 				<img src="./img/igord.jpg" alt="Ігор Дем'яненко" width="270">
 				<h3 class="team-title">Ігор Дем'яненко</h3>
-				<p>Product Designer</p>
+				<p class="team-subtxt">Product Designer</p>
 			</li>
 			<li class="team-item list">
 				<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270">
 				<h3 class="team-title">Ольга Рєпіна</h3>
-				<p>Frontend Developer</p>
+				<p class="team-subtxt">Frontend Developer</p>
 			</li>
 			<li class="team-item list">
 				<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270">
 				<h3 class="team-title">Микола Тарасов</h3>
-				<p>Marketing</p>
+				<p class="team-subtxt">Marketing</p>
 			</li>
 			<li class="team-item list">
 				<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270">
 				<h3 class="team-title">Михайло Єрмаков</h3>
-				<p>UI Designer</p>
+				<p class="team-subtxt">UI Designer</p>
 			</li>
 		</ul>
 	</section>
