--- a/portfolio.html
+++ b/portfolio.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолiо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
 
-    <!-- Header -->
+    <!----------------- Header ----------------->
     <header class="header">
         <nav class="header-nav">
             <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
@@ -28,130 +33,141 @@
             <li class="list"><a href="tel:+380961111111" class="adress-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <!-- Главная страница -->
-    <ul class="btn-group">
-        <li class="list"><button type="button" class="btn">Усі</button></li>
-        <li class="list"><button type="button" class="btn">Веб-сайти</button></li>
-        <li class="list"><button type="button" class="btn">Додатки</button></li>
-        <li class="list"><button type="button" class="btn">Дизайн</button></li>
-        <li class="list"><button type="button" class="btn">Маркетинг</button></li>
-    </ul>
 
-    <ul class="cards-group">
-        <li class="list">
-            <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
-            <h1>Технокряк</h1>
-            <p>Веб-сайт</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
-            <h1>Постер New Orlean vs Golden Star</h1>
-            <p>Дизайн </p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
-            <h1>Ресторан Seafood</h1>
-            <p>Додаток</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
-            <h1>Проєкт Prime</h1>
-            <p>Маркетинг</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
-            <h1>Проєкт Boxes</h1>
-            <p>Додаток</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
-            <h1>Inspiration has no Borders</h1>
-            <p>Веб-сайт</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/book.jpg" alt="opened book" width="370">
-            <h1>Видання Limited Edition</h1>
-            <p>Дизайн</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
-            <h1>Проєкт LAB</h1>
-            <p>Маркетинг</p>
-        </li>
-        <li class="list">
-            <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
-            <h1>Growing Business</h1>
-            <p>Додаток</p>
-        </li>
-    </ul>
+    <!----------------- Главная секция ----------------->
 
-    <!-- Запасной вариант с ссылками -->
+    <main>
+        <section class="portfolio">
+            <h1 class="portfolio-txt">Портфолiо</h1>
+            <!-- Главная страница -->
+            <ul class="btn-group">
+                <li class="list"><button type="button" class="btn">Усі</button></li>
+                <li class="list"><button type="button" class="btn">Веб-сайти</button></li>
+                <li class="list"><button type="button" class="btn">Додатки</button></li>
+                <li class="list"><button type="button" class="btn">Дизайн</button></li>
+                <li class="list"><button type="button" class="btn">Маркетинг</button></li>
+            </ul>
 
-    <ul>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
-                <h1>Технокряк</h1>
-                <p>Веб-сайт</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
-                <h1>Постер New Orlean vs Golden Star</h1>
-                <p>Дизайн </p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
-                <h1>Ресторан Seafood</h1>
-                <p>Додаток</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
-                <h1>Проєкт Prime</h1>
-                <p>Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
-                <h1>Проєкт Boxes</h1>
-                <p>Додаток</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
-                <h1>Inspiration has no Borders</h1>
-                <p>Веб-сайт</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/book.jpg" alt="opened book" width="370">
-                <h1>Видання Limited Edition</h1>
-                <p>Дизайн</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
-                <h1>Проєкт LAB</h1>
-                <p>Маркетинг</p>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
-                <h1>Growing Business</h1>
-                <p>Додаток</p>
-            </a>
-        </li>
-    </ul>
+            <!-- <ul class="cards-group">
+                <li class="list">
+                    <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн </p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Додаток</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
+                    <h2>Проєкт Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
+                    <h2>Проєкт Boxes</h2>
+                    <p>Додаток</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/book.jpg" alt="opened book" width="370">
+                    <h2>Видання Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
+                    <h1>Проєкт LAB</h1>
+                    <p>Маркетинг</p>
+                </li>
+                <li class="list">
+                    <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
+                    <h1>Growing Business</h1>
+                    <p>Додаток</p>
+                </li>
+            </ul> -->
+
+            <!----------------- Запасной вариант с ссылками ----------------->
+
+            <ul class="portfolio-cards">
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
+                        <h2 class="portfolio-txt">Технокряк</h2>
+                        <p class="portfolio-subtxt">Веб-сайт</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
+                        <h2 class="portfolio-txt">Постер New Orlean vs Golden Star</h2>
+                        <p class="portfolio-subtxt">Дизайн </p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
+                        <h2 class="portfolio-txt">Ресторан Seafood</h2>
+                        <p class="portfolio-subtxt">Додаток</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
+                        <h2 class="portfolio-txt">Проєкт Prime</h2>
+                        <p class="portfolio-subtxt">Маркетинг</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
+                        <h2 class="portfolio-txt">Проєкт Boxes</h2>
+                        <p class="portfolio-subtxt">Додаток</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
+                        <h2 class="portfolio-txt">Inspiration has no Borders</h2>
+                        <p class="portfolio-subtxt">Веб-сайт</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/book.jpg" alt="opened book" width="370">
+                        <h2 class="portfolio-txt">Видання Limited Edition</h2>
+                        <p class="portfolio-subtxt">Дизайн</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
+                        <h2 class="portfolio-txt">Проєкт LAB</h2>
+                        <p class="portfolio-subtxt">Маркетинг</p>
+                    </a>
+                </li>
+                <li class="portfolio-list list">
+                    <a href="#" class="link">
+                        <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
+                        <h2 class="portfolio-txt">Growing Business</h2>
+                        <p class="portfolio-subtxt">Додаток</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+    </main>
+
+
 
 
     <footer class="footer">
