--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,9 @@
                 <li class="list"><button type="button" class="btn">Маркетинг</button></li>
             </ul>
 
+
+            <!----------------- Запасной вариант с ссылками ----------------->
+
             <!-- <ul class="cards-group">
                 <li class="list">
                     <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
@@ -96,7 +99,7 @@
                 </li>
             </ul> -->
 
-            <!----------------- Запасной вариант с ссылками ----------------->
+            <!----------------- Вариант с ссылками ----------------->
 
             <ul class="portfolio-cards">
                 <li class="portfolio-list list">
@@ -167,12 +170,11 @@
 
     </main>
 
-
-
+    <!----------------- Footer ----------------->
 
     <footer class="footer">
         <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-        <!-- Адрес -->
+        <!----------------- Адрес ----------------->
         <address>
             <ul class="footer-list">
                 <li class="list"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
@@ -187,6 +189,7 @@
             </ul>
         </address>
     </footer>
+
 </body>
 
 </html>
