--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	</nav>
 
 	<ul class="adress-nav">
-		<li class="list"><a href="mailto:info@devstudio.com" class="adress-link">info@devstudio.com</a></li>
-		<li class="list"><a href="tel:+380961111111" class="adress-link">+38 096 111 11 11</a></li>
+		<li class="list"><a href="mailto:info@devstudio.com" class="adress-link link">info@devstudio.com</a></li>
+		<li class="list"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
 	</ul>
 </header>
 
@@ -41,7 +41,7 @@
 
 	<!-- Что нам важно -->
 	<section class="section">
-		<h2 class="section-title">Нашi переваги</h2>
+		<h2 class="section-title visually-hidden">Нашi переваги</h2>
 		<ul class="significant">
 			<li class="significant-list list">
 				<h3 class="significant-title">Увага до деталей</h3>
