--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
         </nav>
 
         <ul class="adress-nav">
-            <li class="list"><a href="mailto:info@devstudio.com" class="adress-link">info@devstudio.com</a></li>
-            <li class="list"><a href="tel:+380961111111" class="adress-link">+38 096 111 11 11</a></li>
+            <li class="list"><a href="mailto:info@devstudio.com" class="adress-link link">info@devstudio.com</a></li>
+            <li class="list"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -38,7 +38,7 @@
 
     <main>
         <section class="portfolio">
-            <h1 class="portfolio-txt">Портфолiо</h1>
+            <h1 class="portfolio-txt visually-hidden">Портфолiо</h1>
             <!-- Главная страница -->
             <ul class="btn-group">
                 <li class="list"><button type="button" class="btn">Усі</button></li>
@@ -47,56 +47,51 @@
                 <li class="list"><button type="button" class="btn">Дизайн</button></li>
                 <li class="list"><button type="button" class="btn">Маркетинг</button></li>
             </ul>
-
-
-            <!----------------- Запасной вариант с ссылками ----------------->
-
-            <!-- <ul class="cards-group">
-                <li class="list">
-                    <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн </p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/book.jpg" alt="opened book" width="370">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
-                    <h1>Проєкт LAB</h1>
-                    <p>Маркетинг</p>
-                </li>
-                <li class="list">
-                    <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
-                    <h1>Growing Business</h1>
-                    <p>Додаток</p>
-                </li>
+            <li class="list">
+                <img src="./img/hw2/techcrack.jpg" alt="tech skills" width="370">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/basketball.jpg" alt="basketball foto" width="370">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн </p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/seafood.jpg" alt="seefoot logo" width="370">
+                <h2>Ресторан Seafood</h2>
+                <p>Додаток</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/headsset.jpg" alt="headsset" width="370">
+                <h2>Проєкт Prime</h2>
+                <p>Маркетинг</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/boxes.jpg" alt="boxes" width="370">
+                <h2>Проєкт Boxes</h2>
+                <p>Додаток</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/monitor.jpg" alt="monitor" width="370">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/book.jpg" alt="opened book" width="370">
+                <h2>Видання Limited Edition</h2>
+                <p>Дизайн</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/labproject.jpg" alt="project lab" width="370">
+                <h1>Проєкт LAB</h1>
+                <p>Маркетинг</p>
+            </li>
+            <li class="list">
+                <img src="./img/hw2/notebook.jpg" alt="notebook" width="370">
+                <h1>Growing Business</h1>
+                <p>Додаток</p>
+            </li>
             </ul> -->
 
             <!----------------- Вариант с ссылками ----------------->
