--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
 	<!--Главная часть-->
 	<main>
 		<!--  Hero -->
-		<section class="hero">
-			<div class="hero-wrapper container">
-				<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-				<button type="button" class="hero-btn">Замовити послугу</button>
-			</div>
+		<div class="hero-overlay">
+			<section class="hero">
+				<div class="hero-wrapper container">
+					<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+					<button type="button" class="hero-btn">Замовити послугу</button>
+				</div>
+		</div>
+
 		</section>
 
 		<!-- Что нам важно -->
@@ -55,23 +58,23 @@
 			<div class="container">
 				<h2 class="section-title visually-hidden">Нашi переваги</h2>
 				<ul class="significant list">
-					<li class="significant-list">
+					<li class="significant-list icon-satelit">
 						<h3 class="significant-title">Увага до деталей</h3>
 						<p class="sign-subtxt">Ідейні міркування, і навіть початок повсякденної роботи з формування
 							позиції.
 						</p>
 					</li>
-					<li class="significant-list">
+					<li class="significant-list icon-clock">
 						<h3 class="significant-title">Пунктуальнiсть</h3>
 						<p class="sign-subtxt">Завдання організації, особливо рамки і місце навчання кадрів тягне у
 							себе.
 						</p>
 					</li>
-					<li class="significant-list">
+					<li class="significant-list icon-stats">
 						<h3 class="significant-title">Планування</h3>
 						<p class="sign-subtxt">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
-					<li class="significant-list">
+					<li class="significant-list icon-astronaut">
 						<h3 class="significant-title">Сучаснi технологiї</h3>
 						<p class="sign-subtxt">Значимість цих проблем настільки очевидна, що реалізація планових
 							завдань.
