--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
 			</nav>
 
 			<ul class="adress-nav list">
-				<li class="adress-item"><a href="mailto:info@devstudio.com"
-						class="adress-link link">info@devstudio.com</a>
+
+				<li class="adress-item">
+					<a href="mailto:info@devstudio.com" class="adress-link link">
+						<svg class="icon-post icon-adress">
+							<use href="./img/sprite.svg#icon-post"></use>
+						</svg>
+						info@devstudio.com</a>
 				</li>
-				<li class="adress-item"><a href="tel:+380961111111" class="adress-link link">+38 096 111 11 11</a></li>
+				<li class="adress-item">
+					<a href="tel:+380961111111" class="adress-link link">
+						<svg class="icon-phone icon-adress">
+							<use href="./img/sprite.svg#icon-phone"></use>
+						</svg>
+						+38 096 111 11 11</a></li>
 			</ul>
 		</div>
 	</header>
@@ -106,24 +116,144 @@
 							<img src="./img/igord.jpg" alt="Ігор Дем'яненко" width="270" class="team-img">
 							<h3 class="team-title">Ігор Дем'яненко</h3>
 							<p class="team-subtxt">Product Designer</p>
+							<ul class="team-social  list">
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-instagram icon">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-twitter icon">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-facebook icon">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-linkedin icon">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 
 						<li class="team-item">
 							<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270" class="team-img">
 							<h3 class="team-title">Ольга Рєпіна</h3>
 							<p class="team-subtxt">Frontend Developer</p>
+							<ul class="team-social  list">
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-instagram icon">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-twitter icon">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-facebook icon">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-linkedin icon">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 
 						<li class="team-item">
 							<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270" class="team-img">
 							<h3 class="team-title">Микола Тарасов</h3>
 							<p class="team-subtxt">Marketing</p>
+							<ul class="team-social  list">
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-instagram icon">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-twitter icon">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-facebook icon">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-linkedin icon">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 
 						<li class="team-item">
 							<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270" class="team-img">
 							<h3 class="team-title">Михайло Єрмаков</h3>
 							<p class="team-subtxt">UI Designer</p>
+							<ul class="team-social  list">
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-instagram icon">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-twitter icon">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-facebook icon">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-link">
+									<a href="#" class="social-link">
+										<svg class="icon-linkedin icon">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</li>
 					</ul>
 				</div>
