--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
 	<meta charset="UTF-8">
@@ -32,7 +32,6 @@
 			</nav>
 
 			<ul class="adress-nav list">
-
 				<li class="adress-item">
 					<a href="mailto:info@devstudio.com" class="adress-link link">
 						<svg class="icon-post icon-adress">
@@ -40,12 +39,14 @@
 						</svg>
 						info@devstudio.com</a>
 				</li>
+
 				<li class="adress-item">
 					<a href="tel:+380961111111" class="adress-link link">
 						<svg class="icon-phone icon-adress">
 							<use href="./img/sprite.svg#icon-phone"></use>
 						</svg>
-						+38 096 111 11 11</a></li>
+						+38 096 111 11 11</a>
+				</li>
 			</ul>
 		</div>
 	</header>
@@ -53,13 +54,12 @@
 	<!--Главная часть-->
 	<main>
 		<!--  Hero -->
-		<div class="hero-overlay">
-			<section class="hero">
-				<div class="hero-wrapper container">
-					<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-					<button type="button" class="hero-btn">Замовити послугу</button>
-				</div>
-		</div>
+
+		<section class="hero hero-overlay">
+			<div class="hero-wrapper container">
+				<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+				<button type="button" class="hero-btn">Замовити послугу</button>
+			</div>
 
 		</section>
 
@@ -68,23 +68,46 @@
 			<div class="container">
 				<h2 class="section-title visually-hidden">Нашi переваги</h2>
 				<ul class="significant list">
-					<li class="significant-list icon-satelit">
+					<li class="significant-list">
+						<div class="thumb icon-significant">
+							<svg class="significant-icon icon" width='65.32'>
+								<use href="./img/sprite.svg#icon-satelit"></use>
+							</svg>
+						</div>
 						<h3 class="significant-title">Увага до деталей</h3>
 						<p class="sign-subtxt">Ідейні міркування, і навіть початок повсякденної роботи з формування
 							позиції.
 						</p>
 					</li>
-					<li class="significant-list icon-clock">
+
+					<li class="significant-list">
+						<div class="thumb icon-significant">
+							<svg class="significant-icon icon" width='65.32'>
+								<use href="./img/sprite.svg#icon-clock"></use>
+							</svg>
+						</div>
 						<h3 class="significant-title">Пунктуальнiсть</h3>
 						<p class="sign-subtxt">Завдання організації, особливо рамки і місце навчання кадрів тягне у
 							себе.
 						</p>
 					</li>
-					<li class="significant-list icon-stats">
+
+					<li class="significant-list">
+						<div class="thumb icon-significant">
+							<svg class="significant-icon icon" width='70'>
+								<use href="./img/sprite.svg#icon-stats"></use>
+							</svg>
+						</div>
 						<h3 class="significant-title">Планування</h3>
 						<p class="sign-subtxt">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
-					<li class="significant-list icon-astronaut">
+
+					<li class="significant-list">
+						<div class="thumb icon-significant">
+							<svg class="significant-icon icon" width='60.66'>
+								<use href="./img/sprite.svg#icon-astronaut"></use>
+							</svg>
+						</div>
 						<h3 class="significant-title">Сучаснi технологiї</h3>
 						<p class="sign-subtxt">Значимість цих проблем настільки очевидна, що реалізація планових
 							завдань.
@@ -110,153 +133,227 @@
 		<section class="team section">
 			<div class="container team">
 				<h2 class="section-title">Наша команда</h2>
-				<div class="wrapper-item">
-					<ul class="team-list list">
-						<li class="team-item">
-							<img src="./img/igord.jpg" alt="Ігор Дем'яненко" width="270" class="team-img">
-							<h3 class="team-title">Ігор Дем'яненко</h3>
-							<p class="team-subtxt">Product Designer</p>
-							<ul class="team-social  list">
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-instagram icon">
-											<use href="./img/sprite.svg#icon-instagram"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-twitter icon">
-											<use href="./img/sprite.svg#icon-twitter"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-facebook icon">
-											<use href="./img/sprite.svg#icon-facebook"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-linkedin icon">
-											<use href="./img/sprite.svg#icon-linkedin"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
-						</li>
 
-						<li class="team-item">
-							<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270" class="team-img">
-							<h3 class="team-title">Ольга Рєпіна</h3>
-							<p class="team-subtxt">Frontend Developer</p>
-							<ul class="team-social  list">
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-instagram icon">
-											<use href="./img/sprite.svg#icon-instagram"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-twitter icon">
-											<use href="./img/sprite.svg#icon-twitter"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-facebook icon">
-											<use href="./img/sprite.svg#icon-facebook"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-linkedin icon">
-											<use href="./img/sprite.svg#icon-linkedin"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
-						</li>
+				<ul class="team-list list">
+					<li class="team-item">
+						<img src="./img/igord.jpg" alt="Ігор Дем'яненко" class="team-img" width="270">
+						<h3 class="team-title">Ігор Дем'яненко</h3>
+						<p class="team-subtxt">Product Designer</p>
+						<ul class="team-social list">
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-instagram icon" width="20" height="20">
+										<use href="./img/sprite.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-twitter icon" width="16.25" height="16.25px">
+										<use href="./img/sprite.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-facebook icon" width="10" height="
+										20px">
+										<use href="./img/sprite.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-linkedin icon" width="20" height="20px">
+										<use href="./img/sprite.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</li>
 
-						<li class="team-item">
-							<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270" class="team-img">
-							<h3 class="team-title">Микола Тарасов</h3>
-							<p class="team-subtxt">Marketing</p>
-							<ul class="team-social  list">
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-instagram icon">
-											<use href="./img/sprite.svg#icon-instagram"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-twitter icon">
-											<use href="./img/sprite.svg#icon-twitter"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-facebook icon">
-											<use href="./img/sprite.svg#icon-facebook"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-linkedin icon">
-											<use href="./img/sprite.svg#icon-linkedin"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
-						</li>
+					<li class="team-item">
+						<img src="./img/olgar.jpg" alt="Ольга Рєпіна" width="270" class="team-img">
+						<h3 class="team-title">Ольга Рєпіна</h3>
+						<p class="team-subtxt">Frontend Developer</p>
+						<ul class="team-social  list">
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-instagram icon" width="20" height="20">
+										<use href="./img/sprite.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-twitter icon" width="16.25" height="16.25px">
+										<use href="./img/sprite.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-facebook icon" width="10" height="
+										20px">
+										<use href="./img/sprite.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-linkedin icon" width="20" height="20px">
+										<use href="./img/sprite.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</li>
 
-						<li class="team-item">
-							<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270" class="team-img">
-							<h3 class="team-title">Михайло Єрмаков</h3>
-							<p class="team-subtxt">UI Designer</p>
-							<ul class="team-social  list">
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-instagram icon">
-											<use href="./img/sprite.svg#icon-instagram"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-twitter icon">
-											<use href="./img/sprite.svg#icon-twitter"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-facebook icon">
-											<use href="./img/sprite.svg#icon-facebook"></use>
-										</svg>
-									</a>
-								</li>
-								<li class="social-link">
-									<a href="#" class="social-link">
-										<svg class="icon-linkedin icon">
-											<use href="./img/sprite.svg#icon-linkedin"></use>
-										</svg>
-									</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
+					<li class="team-item">
+						<img src="./img/mukolat.jpg" alt="Микола Тарасов" width="270" class="team-img">
+						<h3 class="team-title">Микола Тарасов</h3>
+						<p class="team-subtxt">Marketing</p>
+						<ul class="team-social  list">
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-instagram icon" width="20" height="20">
+										<use href="./img/sprite.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-twitter icon" width="16.25" height="16.25px">
+										<use href="./img/sprite.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-facebook icon" width="10" height="
+										20px">
+										<use href="./img/sprite.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-linkedin icon" width="20" height="20px">
+										<use href="./img/sprite.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</li>
+
+					<li class="team-item">
+						<img src="./img/misha.jpg" alt="Михайло Єрмаков" width="270" class="team-img">
+						<h3 class="team-title">Михайло Єрмаков</h3>
+						<p class="team-subtxt">UI Designer</p>
+						<ul class="team-social  list">
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-instagram icon" width="20" height="20">
+										<use href="./img/sprite.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-twitter icon" width="16.25" height="16.25px">
+										<use href="./img/sprite.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-facebook icon" width="10" height="
+										20px">
+										<use href="./img/sprite.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social">
+								<a href="#" class="social-link" target="_blank" rel="noreferrer noopener nofollow">
+									<svg class="icon-linkedin icon" width="20" height="20px">
+										<use href="./img/sprite.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- Фирмы -->
+		<section class="section">
+			<div class="firms container">
+				<h2 class="firms-title section-title">Постійні клієнти</h2>
+				<ul class="firms-list list">
+
+					<li class="firms-item">
+						<div class="thumb-firms">
+							<a href="#" class="firms-link link" target="_blank" rel="noreferrer noopener nofollow">
+								<svg class="firms-icon icon" width="41" height="46.7">
+									<use href="./img/sprite.svg#icon-yaco"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+
+					<li class="firms-item">
+						<div class="thumb-firms">
+							<a href="#" class="firms-link link" target="_blank" rel="noreferrer noopener nofollow">
+								<svg class="firms-icon icon" width="106" height="60">
+									<use href="./img/sprite.svg#icon-tagline"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+
+					<li class="firms-item">
+						<div class="thumb-firms">
+							<a href="" class="firms-link link" target="_blank" rel="noreferrer noopener nofollow">
+								<svg class="firms-icon icon" width="43.46" height="41.18">
+									<use href="./img/sprite.svg#icon-company"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+
+					<li class="firms-item">
+						<div class="thumb-firms">
+							<a href="#" class="firms-link link" target="_blank" rel="noreferrer noopener nofollow">
+								<svg class="firms-icon icon" width="84.44" height="40.62">
+									<use href="./img/sprite.svg#icon-foster"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+
+					<li class="firms-item">
+						<div class="thumb-firms">
+							<a href="#" class="firms-link link" target="_blank" rel="noreferrer noopener nofollow">
+								<svg class="firms-icon icon" width="62.54" height="45.43">
+									<use href="./img/sprite.svg#icon-brand"></use>
+								</svg>
+							</a>
+						</div>
+					</li>
+
+					<li class="firms-item">
+
+						<div class="thumb-firms">
+							<a href="#" class="firms-link link" target="_blank" rel="noreferrer noopener nofollow">
+								<svg class="firms-icon icon" width="93.79" height="43.93">
+									<use href="./img/sprite.svg#icon-tagcompany"></use>
+								</svg>
+							</a>
+						</div>
+
+					</li>
+				</ul>
 			</div>
 		</section>
 	</main>
@@ -264,22 +361,69 @@
 	<!--Подвал-->
 	<footer class="footer">
 		<div class="container">
-			<a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-			<!-- Адрес -->
-			<address>
-				<ul class="footer-list list">
-					<li class="footer-item"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
-							rel="noopener noreferrer nofollow" class="footer-link link">м.
-							Київ,
-							пр-т Лесі Українки, 26</a></li>
-					<li class="footer-item"><a href="mailto:info@devstudio.com"
-							class="footer-link contakt link">info@devstudio.com</a>
-					</li>
-					<li class="footer-item"><a href="tel:+380961111111" class="footer-link contakt link">+38 096 111 11
-							11</a>
-					</li>
-				</ul>
-			</address>
+			<div class="footer-wrapper">
+				<div class="footer-adress">
+					<a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
+
+					<!-- Адрес -->
+					<address>
+						<ul class="footer-list list">
+							<li class="footer-item"><a href="https://goo.gl/maps/QorF1nrM5F7cBjs38" target="_blank"
+									rel="noopener noreferrer nofollow" class="footer-link link">м.
+									Київ,
+									пр-т Лесі Українки, 26</a></li>
+							<li class="footer-item"><a href="mailto:info@devstudio.com"
+									class="footer-link contakt link">info@devstudio.com</a>
+							</li>
+							<li class="footer-item"><a href="tel:+380961111111" class="footer-link contakt link">+38 096
+									111
+									11
+									11</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+
+				<div class="join-footer">
+					<strong class="join-title">приєднуйтесь</strong>
+					<ul class="footer-social list">
+						<li class="social item-footer">
+							<a href="#" class="social-link join-link" target="_blank"
+								rel="noreferrer noopener nofollow">
+								<svg class="icon-instagram icon" width="20" height="20">
+									<use href="./img/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social item-footer">
+							<a href="#" class="social-link join-link" target="_blank"
+								rel="noreferrer noopener nofollow">
+								<svg class="icon-twitter icon" width="16.25" height="16.25px">
+									<use href="./img/sprite.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social item-footer">
+							<a href="#" class="social-link join-link" target="_blank"
+								rel="noreferrer noopener nofollow">
+								<svg class="icon-facebook icon" width="10" height="
+								20px">
+									<use href="./img/sprite.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social item-footer">
+							<a href="#" class="social-link join-link" target="_blank"
+								rel="noreferrer noopener nofollow">
+								<svg class="icon-linkedin icon" width="20" height="20px">
+									<use href="./img/sprite.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+			</div>
 		</div>
 	</footer>
 
