--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!----------------- Header ----------------->
+    <!-- Header -->
     <header class="header">
         <div class="header-wrapper container">
             <nav class="header-nav">
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <!----------------- Главная секция ----------------->
+    <!-- Главная секция -->
 
     <main>
         <section class="portfolio">
@@ -67,7 +67,7 @@
                     <li class=""><button type="button" class="btn">Маркетинг</button></li>
                 </ul>
 
-                <!----------------- Вариант с ссылками ----------------->
+                <!-- Портфолио -->
 
                 <div class="container portfolio-div">
                     <ul class="portfolio-cards  list">
@@ -177,7 +177,7 @@
 
     </main>
 
-    <!----------------- Footer ----------------->
+    <!-- Footer -->
 
     <footer class="footer">
         <div class="container">
@@ -246,7 +246,6 @@
             </div>
         </div>
     </footer>
-
 
 </body>
 
