--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                     <li class="btn-list"><button type="button" class="btn">Веб-сайти</button></li>
                     <li class="btn-list"><button type="button" class="btn">Додатки</button></li>
                     <li class="btn-list"><button type="button" class="btn">Дизайн</button></li>
-                    <li class=""><button type="button" class="btn">Маркетинг</button></li>
+                    <li class="btn-list"><button type="button" class="btn">Маркетинг</button></li>
                 </ul>
 
                 <!-- Портфолио -->
