--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<nav class="header-nav">
 				<a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
 				<ul class="header-list list">
-					<li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
+					<li class="header-item"><a class="header-link link current" href="./index.html">Студія</a></li>
 					<li class="header-item"><a class="header-link link" href="./portfolio.html">Портфоліо</a></li>
 					<li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
 				</ul>
@@ -122,9 +122,23 @@
 			<div class="container">
 				<h2 class="section-title">Чим ми займаємося</h2>
 				<ul class="made-list list">
-					<li class="made-item"><img src="./img/w-w-d-1.jpg" alt="пишемо код" width="370"></li>
-					<li class="made-item"><img src="./img/w-w-d-2.jpg" alt="читаемо код" width="370"></li>
-					<li class="made-item"><img src="./img/w-w-d-3.jpg" alt="аналiтика" width="370"></li>
+					<li class="made-item">
+
+						<img src="./img/w-w-d-1.jpg" alt="пишемо код" width="370">
+						<div class="thumb-made">
+							<h3 class="thumb-title">Десктопні додатки</h3>
+						</div>
+					</li>
+					<li class="made-item"><img src="./img/w-w-d-2.jpg" alt="читаемо код" width="370">
+						<div class="thumb-made">
+							<h3 class="thumb-title">Мобільні додатки</h3>
+						</div>
+					</li>
+					<li class="made-item"><img src="./img/w-w-d-3.jpg" alt="аналiтика" width="370">
+						<div class="thumb-made">
+							<h3 class="thumb-title">Дизайнерські рішення</h3>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</section>
